# nadsad

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
docs/: nadsadAsciiFormatInfo.md
example/: keywords.txt  syntax.txt
nadsad/: CMakeLists.txt  CMakeSources.cmake  edit.txt
nadsad/nadsad/: nadsad.cpp  nadsad.h  pch.h
nadsad/nadsad/ascii/: deserializer.h  lexer.h  serializer.h
nadsad/nadsad/asciiFormat/: deserializer.h  lexer.h  serializer.h
nadsad/nadsad/assciFormat/: deserializer.h  lexer.h  serializer.h
nadsad/nadsad/binary/: unalignedDeserializer.h  unalignedSerializer.h
scripts/: HeaderFinder.bat
tests/: CMakeLists.txt  testUtils.cmake  testUtils.h
tests/basic/: main.cpp  oneInteger.nadsada
tests/error/: main.cpp
tests/integer/: main.cpp
tests/jump/: allIntegersJump.nadsada  main.cpp
tests/standard/: integer.nadsad  main.cpp  sample.nadsad
